# llm-bias-stackelberg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
data/: bold_1k.jsonl  paradetox_1k.jsonl  paradetox_5k.jsonl  prompts_small.jsonl
data/sft/: build_summary.json  dropped.jsonl  prompts_small.jsonl  reference.jsonl
runs/lora_out/: train_summary.json
runs/m5_eval_a/: metrics.json  predictions.jsonl
runs/m5_eval_a_accept/: metrics.json  predictions.jsonl
runs/m5_eval_a_forced/: metrics.json  predictions.jsonl
runs/m6_sft_from_forced/: build_summary.json  dropped.jsonl
runs/m6_sft_looser/: build_summary.json  dropped.jsonl
runs/m6_sft_looser2/: build_summary.json  dropped.jsonl  sft.jsonl
runs/m7_lora_smoke/: train_summary.json
runs/m8_1_paradetox_ref/: metrics.json  predictions.jsonl
runs/m8_1_paradetox_ref_any/: predictions.jsonl
runs/m8_1_paradetox_ref_toxic/: metrics.json  predictions.jsonl
runs/m8_1_paradetox_ref_weighted/: metrics.json  predictions.jsonl
runs/m8_1_paradetox_sft_all/: build_summary.json  dropped.jsonl  sft.jsonl
runs/m8_2_lora_distilgpt2/: train_summary.json
runs/m8_3_paradetox_distilgpt2_base/: metrics.json  predictions.jsonl
scripts/: make_bold_jsonl.py
tests/: test_build_sft.py  test_ci_smoke.py  test_eval_runner_smoke.py  test_follower_option_a.py  test_jsonl_writer.py  test_leader_rule_based.py  test_llm_kwargs_propagation.py  test_load_examples_jsonl.py  test_metrics.py  test_mock_llm_determinism.py  test_sft_data.py  test_types_roundtrip.py
(+86 files in other folders)
