[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bias-stackelberg"
version = "0.1.0"
description = "Stackelberg leader-follower framework for bias detection and mitigation in LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Davit"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.9", "pre-commit>=3.7.0"]
train = [
  "torch",
  "transformers>=4.40.0",
  "peft>=0.10.0",
  "accelerate>=0.30.0",
]
hf = ["bias-stackelberg[train]", "datasets"]


[project.scripts]
bias-stackelberg = "bias_stackelberg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bias_stackelberg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
